feat: pre-generate the mainpage into the index.html

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="/public/index.css" />
   </head>
   <body>
-    <div id="root" class="background main-container"></div>
+    <div id="root" class="background main-container">
+      <noscript class="dark-theme">
+        <h1 class="header">
+          This application requires JavaScript to run. Please enable JavaScript
+          and refresh the page.
+        </h1>
+      </noscript>
+      %CONTENT%
+    </div>
   </body>
 </html>
