feat: hashed names for js and css bundles

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="/public/index.mjs" type="module"></script>
-    <link rel="stylesheet" href="/public/index.css" />
+    <script src="/public/%SCRIPT%" type="module"></script>
+    <link rel="stylesheet" href="/public/%STYLESHEET%" />
   </head>
   <body>
     <div id="root" class="background main-container">
-      <noscript class="dark-theme">
+      <noscript class="dark-theme box grow">
         <h1 class="header">
           This application requires JavaScript to run. Please enable JavaScript
           and refresh the page.
