--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Pointing Poker</title>
     <script src="/public/%SCRIPT%" type="module"></script>
     <link rel="stylesheet" href="/public/%STYLESHEET%" />
   </head>
