--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,22 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pointing Poker</title>
-    <script src="/public/%SCRIPT%" type="module"></script>
-    <link rel="stylesheet" href="/public/%STYLESHEET%" />
-  </head>
-  <body>
-    <div id="root" class="background main-container">
-      <noscript class="dark-theme box grow">
-        <h1 class="header">
-          This application requires JavaScript to run. Please enable JavaScript
-          and refresh the page.
-        </h1>
-      </noscript>
-      %CONTENT%
-    </div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Pointing Poker</title>
+        <script src="/public/esm/%SCRIPT%" type="module"></script>
+        <link rel="stylesheet" href="/public/esm/%STYLESHEET%" />
+        <link
+            rel="preload"
+            href="https://fonts.gstatic.com/s/ubuntu/v20/4iCv6KVjbNBYlgoC1CzjsGyN.woff2"
+            as="font"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
+            href="https://fonts.gstatic.com/s/ubuntu/v20/4iCv6KVjbNBYlgoCxCvjsGyN.woff2"
+            as="font"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body>
+        <div id="root" class="background main-container">
+            <noscript class="dark-theme box grow">
+                <h1 class="header">
+                    This application requires JavaScript to run. Please enable
+                    JavaScript and refresh the page.
+                </h1>
+            </noscript>
+            %CONTENT%
+        </div>
+    </body>
 </html>
