feat: add meta tags

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Pointing Poker</title>
+        <meta
+            name="description"
+            content="Tool that allows agile teams to estimate their work effort via an online game."
+        />
+        <meta name="robots" content="index, nofollow" />
         <script src="/public/esm/%SCRIPT%" type="module"></script>
         <link rel="stylesheet" href="/public/esm/%STYLESHEET%" />
         <link
