feat: preload link for the google font css

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,6 +14,12 @@
         <link rel="stylesheet" href="/public/esm/%STYLESHEET%" />
         <link
             rel="preload"
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Ubuntu:ital,wght@0,300;0,700;1,500&display=swap"
+            as="style"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="preload"
             href="https://fonts.gstatic.com/s/ubuntu/v20/4iCv6KVjbNBYlgoC1CzjsGyN.woff2"
             as="font"
             crossorigin="anonymous"
