chore: update app description

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
         <title>Pointing Poker</title>
         <meta
             name="description"
-            content="Tool that allows agile teams to estimate their work effort via an online game."
+            content="An open source tool that allows agile teams to estimate their work effort via an online game."
         />
         <meta name="robots" content="index, nofollow" />
         <script src="/public/esm/%SCRIPT%" type="module"></script>
