chore: update meta description

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
         <title>%TITLE%</title>
         <meta
             name="description"
-            content="An open source tool that allows agile teams to estimate their work effort via an online game."
+            content="Poinintg Poker is a game that is commonly used in Agile software development teams to estimate the complexity of a task. This is an open source and free weeb app in which you can join together with others to plan for your next sprint. Perfect for all scrum masters."
         />
         <meta name="robots" content="index, follow" />
         <script src="/public/esm/%SCRIPT%" type="module"></script>
