--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
         <title>%TITLE%</title>
         <meta
             name="description"
-            content="Poinintg Poker is a game that is commonly used in Agile software development teams to estimate the complexity of a task. This is an open source and free weeb app in which you can join together with others to plan for your next sprint. Perfect for all scrum masters."
+            content="Poinintg Poker, sometimes known as planning poker, is a game that is commonly used in Agile software development teams to estimate the complexity of a task. This is an open source and free weeb app in which you can join together with others to plan for your next sprint. Perfect for all scrum masters."
         />
         <meta name="robots" content="index, follow" />
         <script src="/public/esm/%SCRIPT%" type="module"></script>
@@ -73,8 +73,7 @@
         <div id="root" class="background main-container">
             <noscript class="dark-theme box grow">
                 <h1 class="header">
-                    This application requires JavaScript to run. Please enable
-                    JavaScript and refresh the page.
+                    This application requires JavaScript to run. Please enable JavaScript and refresh the page.
                 </h1>
             </noscript>
             %CONTENT%
@@ -84,10 +83,7 @@
         </div>
         <script>
             function docReady(fn) {
-                if (
-                    document.readyState === "complete" ||
-                    document.readyState === "interactive"
-                ) {
+                if (document.readyState === "complete" || document.readyState === "interactive") {
                     fn();
                 } else {
                     document.addEventListener("DOMContentLoaded", fn);
